start of vertical slider

--- a/src/template.html
+++ b/src/template.html
@@ -28,9 +28,9 @@
 
     
     <style>
-      /* body {
-        background: red;
-      } */
+      body {
+        padding-left: 50px;
+      } 
       #root div {
         /* border-radius: 5px; */
         /* background: #FFFFFF; */
