new switch vertical and range

--- a/src/template.html
+++ b/src/template.html
@@ -31,18 +31,31 @@
       body {
         padding-left: 50px;
       } 
-      #root div {
+      #rootq{
+        position: relative;
+        /* width: 300px; */
         /* border-radius: 5px; */
         /* background: #FFFFFF; */
         /* background: linear-gradient(left top, #E0E0E0, #EEEEEE); */
         /* width: 266px;*/
-        height: 6px; 
+        /* height: 6px;  */
         /* margin: 5px; */
         /* background: linear-gradient(to right, blue 0%, blue 30%, white 30%, white 100%); */
         /* border: 1px solid rgba(31, 32, 65);
         border-radius: 6px; */
       }
-      #root div div {
+      #qwe {
+        /* width: 12px;
+        height: 12px; */
+        position: relative;
+        /* left: -7px; 
+        top: -4px; */
+        /* cursor: pointer;
+        /* background: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%); */
+        /* border: 2px solid #FFFFFF; 
+        border-radius: 10px;  */
+      }
+      #qwer {
         /* width: 12px;
         height: 12px; */
         position: relative;
